<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <android.widget.Button
            android:id="@+id/clearAll"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/clear_all"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/buttonSubtract"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/buttonMulti"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/multi"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/buttonPoint"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/point"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/blue_dark"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <android.widget.Button
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/red_light"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </GridLayout>
</RelativeLayout>